# inference_set_design

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/: qm9_dataset.parquet
data/QM9/: test.parquet  valid.parquet
inference_set_design/: config.py  env.py  main.py
inference_set_design/agents/: active_agent.py  bald_agent.py  base_agent.py  config.py  diversity_agents.py  grid_agent.py  random_agent.py  sa_agent.py
inference_set_design/models/: config.py  mlps.py
inference_set_design/tasks/: base_task.py  config.py  corrupted_mnist.py  mol3d.py  qm9.py  rxrx3.py
inference_set_design/utils/: metrics.py  misc.py
notebooks/data_processing/: qm9.ipynb
notebooks/tutorials/: mnist_tutorial.ipynb  qm9_tutorial.ipynb
